[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gfx/weapons/bullet.png" type="Texture" id=1]
[ext_resource path="res://source/weapons/Bullet.gd" type="Script" id=2]
[ext_resource path="res://source/environment/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.75845, 2.87621 )

[sub_resource type="CircleShape2D" id=2]
radius = 70.0

[node name="Bullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 3
mode = 2
mass = 10.0
gravity_scale = 4.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
explosion = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="bullet" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true
drag_margin_left = 0.8
drag_margin_top = 0.8
drag_margin_right = 0.8
drag_margin_bottom = 0.8

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=[
"Bullets",
]]
collision_layer = 4
collision_mask = 2

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
